[NFC] repo-wide: Use multiple-argument form of %cargo_install
Also use new cargo macros for rav1e

Signed-off-by: Thomas Staudinger <Staudi.Kaos@gmail.com>

--- a/packages/c/cargo-c/package.yml
+++ b/packages/c/cargo-c/package.yml
@@ -31,6 +31,7 @@ setup      : |
 build      : |
     %cargo_build
 install    : |
-    for p in api build install test; do
-    %cargo_install cargo-c${p}
-    done
+    %cargo_install cargo-capi \
+                   cargo-cbuild \
+                   cargo-cinstall \
+                   cargo-ctest
