--- a/packages/c/czkawka/package.yml
+++ b/packages/c/czkawka/package.yml
@@ -21,9 +21,7 @@ setup      : |
 build      : |
     %cargo_build --workspace
 install    : |
-    for p in cli gui; do
-    %cargo_install czkawka_${p}
-    done
+    %cargo_install czkawka_cli czkawka_gui
 
     install -Dm00644 data/com.github.qarmin.czkawka.desktop -t $installdir/usr/share/applications
     install -Dm00644 data/icons/*.svg -t $installdir/usr/share/icons/hicolor/scalable/apps
